--- a/index.html
+++ b/index.html
@@ -2,32 +2,27 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AwesomeBook</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
+  <title>Document</title>
 </head>
+
 <body>
-        <div id="list">
-            <button onclick="removeItem()" class="buttonClass">
-                Remove
-            </button>
-        </div>
-       <div>
-         <input type="text" id="candidate" />
-          <div>
-               <div id="list">
-                </div>
-               <div>
-                 <input type="text" id="candidate" />
-                  <button onclick="addItem()" class="buttonClass">
-                    Add
-                  </button>
-                </div>
-            </div>
-        </div>
-       <script src="./js/menu.js"></script>
-    </body>
-</html>
+  <h1>Aweasome Books</h1>
+  <section class="library">
+
+  </section>
+  <form class="form">
+    <input class="input-author" type="text" placeholder="Title">
+    <input class="input-book" type="text" placeholder="Book">
+    <button type="submit">
+      Add
+    </button>
+  </form>
+  <div class="errormessage">Book was added previously on your bookshelf </div>
+  <script src="./js/menu.js"></script>
+</body>
+
+</html
