--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-  <h1>Aweasome Books</h1>
+  <h1>Awesome Books</h1>
   <section class="library">
 
   </section>
   <form class="form">
     <input class="input-author" type="text" placeholder="Title">
-    <input class="input-book" type="text" placeholder="Book">
+    <input class="input-book" type="text" placeholder="Author">
     <button type="submit">
       Add
     </button>
@@ -24,5 +24,4 @@
   <div class="errormessage">Book was added previously on your bookshelf </div>
   <script src="./js/menu.js"></script>
 </body>
-
-</html
+</html>
