--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
     <p class="form-heading">Add a new book</p>
     <form class="form">
       <input class="input-author" type="text" placeholder="Title">
-      <input class="input-book" type="text" placeholder="Book">
+      <input class="input-book" type="text" placeholder="Author">
       <button type="submit" >Add</button>
     </form>
     <div class="errormessage">Book was added previously on your bookshelf </div>
   </section>
   <script src="./js/menu.js"></script>
 </body>
-
-</html
+</html>
