--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
 </head>
 
 <body>
-  <h1>Awesome Books</h1>
-  <section class="library">
+  <section class="wrapper">
+    <h1>All Awesome Books</h1>
+    <ul class="library">
 
+    </ul>
+    <span class="line"></span>
+    <h4 class="form-heading">Add a new book</h4>
+    <form class="form">
+      <input class="input-author" type="text" placeholder="Title">
+      <input class="input-book" type="text" placeholder="Author">
+      <button type="submit" >Add</button>
+    </form>
+    <div class="errormessage">Book was added previously on your bookshelf </div>
   </section>
-  <form class="form">
-    <input class="input-author" type="text" placeholder="Title">
-    <input class="input-book" type="text" placeholder="Author">
-    <button type="submit">
-      Add
-    </button>
-  </form>
-  <div class="errormessage">Book was added previously on your bookshelf </div>
   <script src="./js/menu.js"></script>
 </body>
 </html>
