Update the README.md file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <section class="wrapper">
+  <main class="wrapper">
     <h1>All Awesome Books</h1>
     <ul class="library">
 
@@ -23,7 +23,7 @@
       <button type="submit" >Add</button>
     </form>
     <div class="errormessage">Book was added previously on your bookshelf </div>
-  </section>
+  </main>
   <script src="./js/menu.js"></script>
 </body>
 </html>
