Add margin 0 auto to the contact section

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
     </div>
     <section class="contact-info">
       <h1>Contact Information</h1>
-      <p>Do you have any questions or just you want to say "Hello"?</p>
-      <p>You can reach out to us!</p>
+      <p>Do you have any questions or just you want to say "Hello"? <br> You can reach out to us!</p>
       <ul>
         <li>Our Email: bantem2021@gmail.com</li>
         <li>Our Phone Number: +251939546094</li>
