--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Awesome-books</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="index.css" />
 </head>
 
 <body>
@@ -51,6 +51,6 @@
       <p>Copyright @2022 developed by <b>Sonick</b> and <b>Bantealem</b>.</p>
     </footer>
   </div>
-  <script src="./js/menu.js"></script>
+  <script type="module" src="index.js"></script>
 </body>
 </html>
